--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,50 @@
-<br><br>
+<div class="container">
+    <div class="col" style="text-align: center;"><h1>{{title}}</h1>
+
+     <br><br>
+
+        <form class="form.group row">
+        
+        <div class="form-group col-md-3">
+            <label for="nombre">Nombre:</label>
+            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Nombre" [(ngModel)]="cuadroNombre">
+        </div>
+        <div class="form-group col-md-3">
+            <label for="apellido">Apellido:</label>
+            <input type="text" class="form-control" name="apellido" id="apellido" placeholder="Apellido" [(ngModel)]="cuadroApellido">
+        </div>
+        <div class="form-group col-md-3">
+            <label for="cargo">Cargo:</label>
+            <input type="text" class="form-control" name="cargo" id="cargo" placeholder="Cargo" [(ngModel)]="cuadroCargo">
+        </div>
+        <div class="form-group col-md-3">
+            <label for="salario">Salario:</label>
+            <input type="text" class="form-control" name="salario" id="salario" placeholder="Salario" [(ngModel)]="cuadroSalario">
+        </div>
+        <div class="col-md-3" style="text-align: left;">
+            <button type="button" class="btn btn-primary" (click)="agregarEmpleado()" style="margin-top: 35px ">Agregar</button>
+
+        </div>
+
+         </form>
+
+
+
+    </div>
+
+    <br><br><br>
+
+
+
+
+</div>
+
+
+
 
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col" >
             <div *ngFor="let empleado of empleados; let i=index">
            {{i+1}}: {{empleado.nombre}} {{empleado.apellido}} {{empleado.cargo}} {{empleado.salario}}
 
