comunicacion componentes direct3d

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,24 +32,14 @@
 
     </div>
 
-    <br><br><br>
+    
 
 
 
 
 </div>
 
+<br><br><br>
+<app-empleado-hijo-c *ngFor="let empleado of empleados; let i=index" [emplist]="empleado" [ind]="i"></app-empleado-hijo-c>
 
 
-
-<div class="container">
-    <div class="row">
-        <div class="col" >
-            <div *ngFor="let empleado of empleados; let i=index">
-           {{i+1}}: {{empleado.nombre}} {{empleado.apellido}} {{empleado.cargo}} {{empleado.salario}}
-
-
-          </div>
-        </div>  
-    </div>
-</div>
