--- a/src/app/caract-empleado-c/caract-empleado-c.component.html
+++ b/src/app/caract-empleado-c/caract-empleado-c.component.html
@@ -1,3 +1,3 @@
-<label>Caracteristicas</label>
+<label>Caracteristica : </label>
 <input type="text" id="item-input" #nuevaCaract>
 <button (click)="agregaCaract(nuevaCaract.value)" class="btn btn-primary">Agregar Caracteristica</button>
