--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,24 @@
+ <!-- A grey horizontal navbar that becomes vertical on small screens -->
+ <nav class="navbar navbar-expand-sm bg-light">
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Proyectos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Quienes somos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contactos</a>
+      </li>
+    </ul>
+  
+  </nav> 
+
 <div class="container">
     <div class="col" style="text-align: center;"><h1>{{title}}</h1>
 
