--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,63 +4,20 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Proyectos</a>
+        <a class="nav-link" href="/proyectos">Proyectos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Quienes somos</a>
+        <a class="nav-link" href="/quienes">Quienes somos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contactos</a>
+        <a class="nav-link" href="/contacto">Contactos</a>
       </li>
     </ul>
   
   </nav> 
 
-<div class="container">
-    <div class="col" style="text-align: center;"><h1>{{title}}</h1>
 
-     <br><br>
-
-        <form class="form.group row">
-        
-        <div class="form-group col-md-3">
-            <label for="nombre">Nombre:</label>
-            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Nombre" [(ngModel)]="cuadroNombre">
-        </div>
-        <div class="form-group col-md-3">
-            <label for="apellido">Apellido:</label>
-            <input type="text" class="form-control" name="apellido" id="apellido" placeholder="Apellido" [(ngModel)]="cuadroApellido">
-        </div>
-        <div class="form-group col-md-3">
-            <label for="cargo">Cargo:</label>
-            <input type="text" class="form-control" name="cargo" id="cargo" placeholder="Cargo" [(ngModel)]="cuadroCargo">
-        </div>
-        <div class="form-group col-md-3">
-            <label for="salario">Salario:</label>
-            <input type="text" class="form-control" name="salario" id="salario" placeholder="Salario" [(ngModel)]="cuadroSalario">
-        </div>
-        <div class="col-md-3" style="text-align: left;">
-            <button type="button" class="btn btn-primary" (click)="agregarEmpleado()" style="margin-top: 35px ">Agregar</button>
-
-        </div>
-
-         </form>
-
-
-
-    </div>
-
-    
-
-
-
-
-</div>
-
-<br><br><br>
-<app-empleado-hijo-c *ngFor="let empleado of empleados; let i=index" [emplist]="empleado" [ind]="i"></app-empleado-hijo-c>
-
-
+<router-outlet></router-outlet>
