--- a/src/app/actualiza-component/actualiza-component.component.html
+++ b/src/app/actualiza-component/actualiza-component.component.html
@@ -19,7 +19,8 @@
         <input type="text" class="form-control" name="salario" id="salario" placeholder="Salario" [(ngModel)]="cuadroSalario">
     </div>
     <div class="col-md-3" style="text-align: left;">
-        <button type="button" class="btn btn-primary" (click)="actualizaEmpleado()" style="margin-top: 35px ">Actualizar</button>
+        <button type="button" class="btn btn-primary" (click)="actualizaEmpleado()" style="margin-top: 35px; margin-right: 50px; ">Actualizar</button>
+        <button type="button" class="btn btn-primary" (click)="eliminaEmpleado()" style="margin-top: 35px ">Eliminar</button>
 
     </div>
 
