--- a/src/app/empleado-hijo-c/empleado-hijo-c.component.html
+++ b/src/app/empleado-hijo-c/empleado-hijo-c.component.html
@@ -3,8 +3,15 @@
     <div class="row">
         <div class="col" >
           <div> 
-            <a [routerLink]="['/actualiza',ind]">
             {{ind+1}}: {{emplist.nombre}} {{emplist.apellido}} {{emplist.cargo}} {{emplist.salario}}
+            <a [routerLink]="['/actualiza',ind]" [queryParams]="{accion:'1'}">
+            <!--{{ind+1}}: {{emplist.nombre}} {{emplist.apellido}} {{emplist.cargo}} {{emplist.salario}}-->
+              Actualiza
+            </a>
+            &nbsp;&nbsp;
+            <a [routerLink]="['/actualiza',ind]" [queryParams]="{accion:'2'}">
+            
+              Elimina
             </a>
             </div> 
           </div>
